--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 couchbase==2.0.2
 Django==1.8.3
+django-tastypie==0.12.2
+python-dateutil==2.4.2
+python-mimeparse==0.1.4
+six==1.9.0
 wheel==0.24.0
