first proper pip setup: done

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
-recursive-include docs *
+recursive-include docs *.py *.rst Makefile
 include AUTHORS
 include LICENSE
 include README.rst
+global-exclude .DS_Store
