* perform testing with django 1.9 * check with cb 4.1 * using the latest dependancy libs, latest couchbase lib

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 recursive-include docs *.py *.rst Makefile
+recursive-include django_cbtools *.js
 include AUTHORS
 include LICENSE
 include README.rst
