--- a/demo/requirements.txt
+++ b/demo/requirements.txt
@@ -1,12 +1,12 @@
-couchbase==2.0.2
-Django==1.8.3
+couchbase==2.0.8
+Django==1.9.5
 django-extensions==1.5.5
 django-tastypie==0.12.2
 meld3==1.0.2
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
+pytz==2016.4
 requests==2.7.0
 shortuuid==0.4.2
 six==1.9.0
 supervisor==3.1.3
-wheel==0.24.0
